# pro-sebe-store

./: .env  .gitignore  Cargo.toml  README.md  db structure  instrumentation.ts  middleware.ts  next-auth.d.ts  next.config.js  package-lock.json  package.json  routes.ts  ssl-update.sh  sss  tailwind.config.ts
app/: layout.tsx  loading.tsx  page.tsx
app/(checkout)/: layout.tsx
app/(client)/: layout.tsx  query-client.ts
app/api/: handler.rs
app/blocked/: page.tsx
app/components/: protected-component.tsx
app/dashboard/: layout.tsx  loading.tsx  page.tsx
app/payment/: page.tsx
auth/: auth.config.ts  auth.ts
compose/: compose.yaml
config/: auth.ts
hooks/: use-list.tsx  use-paginator.tsx  use-sort-descriptor.tsx
lib/: prisma.ts  type.d.ts
native/recommendation/: Cargo.toml  README.md  package-lock.json  package.json
native/recommendation/src/: lib.rs  recommender.rs
node-loader/: cjs.js  loader.js
prisma/: schema.prisma
pro.sebe.store/: package-lock.json  package.json
providers/: auth-provider.tsx
schema/: category-schema.ts  color-schema.ts  product-schema.ts  size-schema.ts
schema/auth/: login-schema.ts  register-schema.ts  reset-password-schema.ts
schema/banner/: banner-schema.ts
schema/category/: category-schema.ts
schema/colors/: color-schema.ts
schema/misc/: misc-schema.ts
schema/order/: order-schema.ts
schema/product/: product-schema.ts  (+2 more)
service/: category-service.ts  color-service.ts  product-service.ts  size-service.ts
util/: debounce.ts  event-bus.ts  read-search-params.ts  sort-descriptor-converter.ts
(+335 files in other folders)
