[package]
name = "recommendation"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
rayon = "1.9.0"
tfidf-summarizer = "2.0.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.36.0", features = ["full"] }
once_cell = "1.19.0"
